implemented shuffle with stubbed code

--- a/beaconChain/package.json
+++ b/beaconChain/package.json
@@ -32,6 +32,7 @@
     "bignumber.js": "^7.2.1",
     "blakejs": "^1.1.0",
     "js-sha3": "^0.8.0",
+    "lodash": "^4.17.11",
     "ssz": "^1.5.2"
   },
   "bin": {
